test/tests/bad/conflicting-var-def_1.carth
;; ConflictingVarDef

(def foo (letrec ((a 1) (a 2)) a))
